[package]
name = "karma-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"

[dev-dependencies]
cargo-watch = "8.4.0"
watch = "0.2.3"

